2011-01-25  Michael Wiegand <michael.wiegand@greenbone.net>

	* nasl/CMakeList.txt: Add option to ignore warnings regarding
	unprototyped calls in nasl/regex.c to fix the build process with
	recent versions of openSUSE.

	* INSTALL: Add section documenting compiler options.

2011-01-25  Michael Wiegand <michael.wiegand@greenbone.net>

	* doc/CMakeLists.txt: New. Added missing file required to build
	documentation.

2011-01-25  Michael Wiegand <michael.wiegand@greenbone.net>

	* nasl/CMakeList.txt: Fix linking of nasl libraries with other parts
	of openvas-libraries to fix build issue with newer cmake versions.

2011-01-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set to 4.0+rc4

2011-01-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Quick fixes before release.

	* TODO: Removed. The last two entries are not of notable
	relevance anymore (AIX and module dependency problem).

	* CMakeLists.txt: Add libopenvas-config for CPack.

2011-01-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Preparing the openvas-libraries 4.0+rc3 release.

	* openvas_macros.cmake, openvas_cmake_macros: Renamed
	openvas_macros.cmake to openvas_cmake_macros to avoid
	confusion with temporary .cmake files and to avoid
	special treatment in the CMakeLists.txt for CPack.

	* libopenvas.pc.in: Removed. It is was yet another remains
	of the autotools time.

	* CHANGES: Updated.

2011-01-08  Matthew Mundell <matthew.mundell@greenbone.net>

	* base/openvas_file.c: Remove todos about moving into this module.

2011-01-03  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	Fix rule saving for ldap authenticated users by ensuring existence of

2011-01-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/CMakeLists.txt: Pass OPENVASLIB_VERSION properly for compilation.

	* nasl/nasl_init.c (libsvars, nasl_version): Renamed VERSION
	to OPENVASLIB_VERSION.
