@@ -1,3 +1,7 @@
+2011-01-25  Christian Kuersteiner <ckuerste@gmx.ch>
+
+	* misc/network.c (open_socket): Removed unnecessary parameter.
+
 2011-01-25  Michael Wiegand <michael.wiegand@greenbone.net>
 
 	* nasl/CMakeList.txt: Add option to ignore warnings regarding
